<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    >

    <TextView
        android:id="@+id/txt_contador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
         />

    <TextView
        android:id="@+id/txt_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/texto_inicial"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:text="@string/txt_verdadero"
            />

        <Button
            android:id="@+id/btn_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E91E63"
            android:text="@string/txt_falso"
            android:onClick="clickEnFalse"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sig"
        />

    <Button
        android:id="@+id/btn_pag_fc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pag_fac"
        />

    <Button
        android:id="@+id/btn_map_fc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_map_fac"
        />

</LinearLayout>